# sample-banking-agentic-AI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_api_demo.py  run_demo.py
docs/: Communication_Templates.docx  Personal_12Month_Prep_Plan.xlsx  Program_Master_ToDo.xlsx  Program_Templates_Pack.docx  README.md  Unstructured_Data_Program.pptx
notebooks/: agent_demo.ipynb  api_demo.ipynb
src/banking_agent/: __init__.py  main.py
src/banking_agent/agent/: __init__.py  context.py  core.py
src/banking_agent/apis/: __init__.py  account_api.py  api_gateway.py  base.py  card_api.py  customer_api.py  loan_api.py  support_api.py  transaction_api.py
src/banking_agent/data/: __init__.py  database.py  models.py
src/banking_agent/tools/: __init__.py  definitions.py  executor.py
src/banking_agent/utils/: __init__.py  config.py  logging_config.py
